fixed a little on mobile

--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -77,7 +77,7 @@
     height: 50vw;
     border-radius: 25vw;
     left: -25vw;
-    top: 500px;
+    top: 600px;
 }
 
 .circles .circle2 {
@@ -85,15 +85,22 @@
     position: absolute;
     background-color: rgb(196, 81, 66);
     width: 30vw;
-    max-width: 35wh;
+    
     height: 50vw;
     max-height: 55vw;
     border-radius: 30vw 0 0 30vw;
     right: 0;
-    top: 900px;
+    top: 930px;
 }
 .intro-home{
     width: 90%;
     display: flex;
     margin: auto;
+}
+@media (min-width: 0px) and (max-width: 600px) {
+   .circles, .circle1, .circle2{
+    max-width: 70vh;
+    width: 1000px;
+    height: 200px;
+   }
 }
